added timer function

--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
             button the timer will begin. If you answer a question incorrectly, 10 seconds will be subtracted from the timer. At the end
             you will have a chance to save your score.
         </p>
+        <p id="showTimer">
+            Timer: 0
+        </p>
         <div>
-           <button class ="intro-btn">Begin Quiz</button> 
+           <button class ="intro-btn" id = "btn1">Begin Quiz</button> 
         </div>
     </header>
     <script src="./assets/js/script.js"></script>
