hide intro page when quiz starts

--- a/index.html
+++ b/index.html
@@ -7,21 +7,29 @@
   </head>
   <body>
     <header class="intro">
-        <h1>
-            Coding Quiz
-        </h1>
-        <p>
-            Welcome! Are you ready to test your knowledge of coding concepts? This is a timed quiz and once you click the start
-            button the timer will begin. If you answer a question incorrectly, 10 seconds will be subtracted from the timer. At the end
-            you will have a chance to save your score.
-        </p>
+        <div class = "intro-page">
+            <h1>
+                Coding Quiz
+            </h1>
+            <p>
+                Welcome! Are you ready to test your knowledge of coding concepts? This is a timed quiz and once you click the start
+                button the timer will begin. If you answer a question incorrectly, 10 seconds will be subtracted from the timer. At the end
+                you will have a chance to save your score.
+            </p>
+            <button class ="intro-btn">Begin Quiz</button> 
+        </div>
         <p id="showTimer">
             Timer: 0
         </p>
-        <div>
-           <button class ="intro-btn" id = "btn1">Begin Quiz</button> 
-        </div>
     </header>
+    <main class="quiz-questions">
+        <h2></h2>
+        <p></p>
+        <button id="btn1"></button>
+        <button id="btn2"></button>
+        <button id="btn3"></button>
+        <button id="btn4"></button>
+    </main>
     <script src="./assets/js/script.js"></script>
   </body>
   </html>
