began start quiz for loop function

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
         </p>
     </header>
     <main class="quiz-questions">
-        <h2></h2>
-        <p></p>
+        <h2 class="quiz-question"></h2>
         <button id="btn1"></button>
         <button id="btn2"></button>
         <button id="btn3"></button>
         <button id="btn4"></button>
+        <p class="answer-result"></p>
     </main>
     <script src="./assets/js/script.js"></script>
   </body>
