--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
     </header>
     <main class="quiz-questions">
         <h2 class="quiz-question"></h2>
-        <button id="btn1"></button>
-        <button id="btn2"></button>
-        <button id="btn3"></button>
-        <button id="btn4"></button>
+        <div class="buttons">
+            <button class = "btn" id="btn1"></button>
+            <button class = "btn" id="btn2"></button>
+            <button class = "btn" id="btn3"></button>
+            <button class = "btn" id="btn4"></button>
+        </div>
         <p class="answer-result"></p>
     </main>
     <script src="./assets/js/script.js"></script>
