quiz evaluates answer as correct or wrong

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
             <button class = "btn" id="btn3"></button>
             <button class = "btn" id="btn4"></button>
         </div>
-        <p class="answer-result"></p>
+        <p class="answer-result">
+
+        </p>
     </main>
     <script src="./assets/js/script.js"></script>
   </body>
