--- a/index.html
+++ b/index.html
@@ -40,16 +40,17 @@
     </main>
     <!-- page for user to enter in initials -->
     <form class="initials">
-    <p class="score-page">
-    </p>
-    <input type="text" name="user-initials" placeholder="Enter Your Initials" />
-    <button class="submit">Submit</button>
+        <p class="score-page">
+        </p>
+        <div class="input-box"></div>
+            <input type="text" name="user-initials" placeholder="Enter Your Initials" />
+            <button class="submit">Submit</button>
+        </div>
     </form>
     <!-- page to display high scores -->
     <section class="show-scores">
-        <p class="scores-view">
-            
-        </p>
+        <!-- <ol class="scores-view">
+        </ol> -->
     </section>
 
 
